# learning_c

./: .gitignore  CMakeLists.txt  README.md  library.c  main.c
dynamic-library-1/: CMakeLists.txt
dynamic-library-2/: CMakeLists.txt  README.md  game.h  lib_b.c  prog_a.c
